# FastVideo

./: .clangd  .dockerignore  .gitignore  .gitmodules  .nvimlog  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  BACKEND_CONFIGURATION_GUIDE.md  CLAUDE.md  DockerFile  Dockerfile  FASTVIDEO_WAN_INFERENCE_GUIDE.md  FLUX2_DIVERGENCE_FIXES.md  FastVideo_node.py  IMPLEMENTATION_NOTES_causal_forcing.md  INFERENCE_READY_SUMMARY.md  LONGCAT_I2V_IMPLEMENTATION_SUMMARY.md  LONGCAT_I2V_VC_IMPLEMENTATION_PLAN.md  LONGCAT_INTEGRATION_PHASE1.md  LONGCAT_INTEGRATION_PHASE2_PLAN.md  LONGCAT_PERFORMANCE_ANALYSIS.md  LONGCAT_PRECISION_ANALYSIS.md  LONGCAT_TESTING.md  LONGCAT_VC_IMPLEMENTATION_PLAN.md  MULTIPROC_EXECUTOR_WALKTHROUGH.md  NATIVE_IMPLEMENTATION_SUMMARY.md  ONBOARDING.md  PLAN.md  RAY_VS_MULTIPROC_ANALYSIS.md  README.md  RUN_TESTS_CHECKLIST.md  STACK.md  TRANSFER_TO_GPU_CLUSTER.md  __init__.py  add_action_module.py  align_debug.md  benchmarking.py  build_env.sh  (+161 more)
.agent/: ONBOARDING.md  STATUS.md
.agents/: ONBOARDING.md  STATUS.md
.buildkite/: pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md  mergify.yml
.sisyphus/: boulder.json
_rebase_backup/: official_waypoint.py  run_diffusers_waypoint.py  waypoint_compare_fastvideo_vs_diffusers.py  waypoint_runpod_compare.md
add-longcat-video/: LORA_CONVERSION_TECHNICAL_GUIDE.md  LORA_IMPLEMENTATION_PLAN.md  LORA_STRUCTURE_FINDINGS.md  todolist.md
apps/: __init__.py
assets/: prompt.txt  prompt_0.txt  prompt_1.txt  prompt_2.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt  prompt_test.txt  strategy_convert.py
comfyui/: README.md  __init__.py
consumer-guide/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
csrc/fastvideo_kernel/: MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/fastvideo_kernel/csrc/: st_attn_h100.cu
csrc/fastvideo_kernel/src/fastvideo_kernel/: ops.py  vmoba.py
csrc/fastvideo_kernel/src/fastvideo_kernel/triton_kernels/: block_sparse_attn_triton.py
csrc/fastvideo_kernel/tests/: test_correctness.py
data/: mixkit_i2v_full.json
data_pipeline/: benchmark_tracks.sh  build_manifest.py  cfg_ablation.py  check_gate_growth.py  convert_droid.py  convert_trackwan_init.py  convert_trackwan_init_v2.py  decode_roundtrip_videos.py  decode_wansyn32k.py  diag_first_frame.py  download_resilient.sh  dp_sweep.sh  droid_dataset_dashboard.py  eval_sparse_track_epe.py  extract_tracks.py  extract_tracks_mp.py  find_static_windows.py  gen_eval_artifacts.py  gen_synth_worker.py  generate_videos.py  lwlr_experiment.py  merge_synth_manifests.py  openvid_download.py  openvid_download_hd.py  openvid_filter.py  precompute_null_text.py  run.sh  run_decode_wansyn32k_slurm.sh  run_download_hd_slurm.sh  run_extract_tracks.sh  run_preprocess_track_slurm.sh  run_seg_slurm.sh  run_segment_synth_slurm.sh  run_segment_tracks.sh  run_synth_gen_slurm.sh  run_tracks_slurm.sh  run_tracks_synth_slurm.sh  sampling_viz.py  seg_compare.py  seg_smoke.py  (+15 more)
data_preperation/: generate_videos_from_json_prompts.py  run_generate_videos_0_100.slurm  run_generate_videos_100_200.slurm  run_generate_videos_200_300.slurm  run_generate_videos_300_400.slurm  run_generate_videos_400_500.slurm  run_generate_videos_500_600.slurm  run_generate_videos_600_700.slurm  run_generate_videos_700_800.slurm  run_generate_videos_800_900.slurm  run_generate_videos_900_1000.slurm  run_generate_videos_dist.slurm  run_generate_videos_from_prompts.sh
debug/: README.md  repro_vsa_padding_nan.py
demo/: gradio_web_demo.py
dev/: config.md  design.md  distill_structure.md  fastgen.md  fastgen_structure.md  phase_add_causal_wangame_dfsft.md  phase_add_wangame.md  phase_causal.md  phase_causal2.md  phase_mode.md  phase_refactor.md  refactor.md  rfc.md
dmd_t2v_output/: t2v_646663.err
docker/: Dockerfile  Dockerfile.python3.10  Dockerfile.python3.11  Dockerfile.python3.12  Dockerfile.python3.12.cuda12.9.1  Dockerfile.yaml  rocm.Dockerfile  rocm7_1.Dockerfile  uv-excludes
docs/: README.md  finetuning.md  (+10 more)
fastvideo-kernel/: .gitignore  CARD.md  CMakeLists.txt  MANIFEST.in  README.md  build.sh  build.toml  example.py  flake.nix  pyproject.toml
fastvideo-kernel/attn_qat_infer/: __init__.py  api.py
fastvideo-kernel/attn_qat_infer/blackwell/: api.cu  launch.h  mainloop_tma_ws.h  params.h
fastvideo-kernel/attn_qat_infer/quantization/: fp4_quantization_4d.cu
fastvideo-kernel/benchmarks/: _bootstrap.py  bench_attn_kernels.py  bench_fused_compress_topk.py  bench_nvfp4_fp8_attention.py  bench_vsa.py  benchmark_attn_qat_train.py  benchmark_blockscaled_fp4_attn.py  benchmark_combined.py  benchmark_flashattn2.py  benchmark_sageattn3.py
fastvideo-kernel/csrc/attention/: block_sparse_h100.cu  st_attn_h100.cu
fastvideo-kernel/csrc/turbodiffusion/gemm/: gemm.cu
fastvideo-kernel/csrc/turbodiffusion/norm/: layernorm.cu  layernorm.hpp  rmsnorm.cu
fastvideo-kernel/csrc/turbodiffusion/quant/: quant.cu
fastvideo-kernel/modified_sageattn/blackwell/: api.cu  block_config.h  kernel_ws.h  softmax_fused.h
fastvideo-kernel/python/fastvideo_kernel/: __init__.py  block_sparse_attn.py  block_sparse_attn_256.py  block_sparse_attn_cute_fwd.py  block_sparse_attn_varlen.py  ops.py  turbodiffusion_ops.py  vsa_utils.py
fastvideo-kernel/python/fastvideo_kernel/triton_kernels/: __init__.py  attn_qat_train.py  block_sparse_attn_triton.py  fused_attention.py  fused_compress_topk.py  index.py  nvfp4_utils.py  qat_attn.py  quant_utils.py  rope_triton.py
fastvideo-kernel/tests/: _bootstrap.py  conftest.py  support_flex_sta.py  test_attn_qat_infer.py  test_attn_qat_train.py  test_attn_qat_train_routing.py  test_bootstrap.py  test_build_arch.py  test_fake_quant.py  test_fused_compress_topk.py  test_qat_attn.py  test_rope_triton.py  test_sta.py  test_turbodiffusion.py  test_vsa.py  test_vsa256_forward.py  test_vsa256_forward_cross.py  test_vsa256_forward_vbs.py  test_vsa256_triton.py  test_vsa_forward.py  test_vsa_utils.py  test_vsa_varlen.py
fastvideo-kernel/torch-ext/: torch_binding.cpp  torch_binding.h
fastvideo-kernel/torch-ext/fastvideo_kernel/: __init__.py
(+7129 files in other folders)
