[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvideo2"
version = "0.1.0"
description = "Post-training-to-serving substrate for video generation models (v2.1 MVP: Wan2.1)"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "torch>=2.12",
    "diffusers>=0.33",
    "transformers>=4.46",
    "huggingface_hub",
    "ftfy",
    "imageio",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fastvideo2 = "fastvideo2.cli:main"

[tool.setuptools.packages.find]
include = ["fastvideo2*"]

[tool.setuptools.package-data]
# evidence (ledger, baselines, goldens) is part of the product — the verify
# ladder and --anchor read it relative to the package.
fastvideo2 = ["evidence/**/*"]

[tool.pytest.ini_options]
testpaths = ["fastvideo2/tests"]
addopts = "-q"
